--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "dependencies": {
     "@heroicons/react": "^1.0.2",
     "@material-ui/icons": "^4.11.2",
+    "@react-pdf/render": "^2.0.12",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "html2canvas": "^1.2.1",
     "jspdf": "^1.4.1",
+    "pdfmake": "^0.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.3",
+    "react-pdf": "^5.3.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-select": "^4.3.1",
